<resources>
    <string name="app_name">SafeValetCaptain</string>
    <string name="white_rounded_rectangle" />
    <string name="scan_qr_code"> Scan QR Code </string>
    <string name="available_orders">Available Orders</string>
    <string name="kia_sportage_2022">kia_sportage_2022</string>
    <string name="_35_98634">35_98634</string>
    <string name="car_no">Car No.</string>
    <string name="key_no">Key No.</string>
    <string name="_2">2</string>
    <string name="take_order">Take Order</string>
    <string name="show_my_qr" >Show My Qr</string>
    <string name="call_back_my_car" >Call Back My Car</string>
    <string name="trip_in_progress">Trip in Progress</string>
    <string name="trip_as_completed">trip as completed</string>
    <string name="time">time</string>
    <string name="completed">completed</string>
    <string name="Date">Data</string>
    <string name="on_the_move">On the move</string>
    <string name="_3_min">3 min</string>
    <string name="take_check_in_photo">Take Check-in Photo</string>
    <string name="pick_up_the_car">Pick up the Car</string>
    <string name="directions">Directions</string>
    <string name="start_driving">Start Driving</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="safe_valet">Safe Valet</string>
    <string name="history">History</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="my_car_35_98634">my_car_35_98634</string>
    <string name="swefieh_village">swefieh_village</string>
    <string name="ahmad_zuhair" />
    <string name="_12_45_pm">12:45 PM</string>
    <string name="parking">Parking</string>
    <string name="mercedes_s_class_2022">Mercedes s class 2022</string>
    <string name="client_name_ahmed">Client Name : Ahmed</string>
    <string name="pick_up">Pick Up</string>
    <string name="_01_45_pm" >01:45 PM</string>
    <string name="_14_10_2022">14 - 10 - 2022</string>
    <string name="choose_the_station">Choose the station</string>
    <string name="station_name">Station Name</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="description">description</string>
    <string name="login">Login</string>
    <string name="_962">962</string>
</resources>