<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/history"
            />

        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share"
            />


        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"
            />

        <item
            android:id="@+id/language"
            android:icon="@drawable/translating"
            android:title="@string/language"
            />



        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            />

    </group>
</menu>