<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    android:backgroundTint="@color/blue"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/pickrectangle"
            android:contentDescription="TODO" />



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
        <TextView
            android:id="@+id/carModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/car_no"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/whiteMyCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_35_98634"
            android:layout_marginTop="1dp"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            android:textSize="13sp"
            tools:ignore="RtlCompat" />

</LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            >
        <TextView
            android:id="@+id/key_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/key_no"
            android:textColor="@color/black"
            android:textSize="12sp" />

            <TextView
                android:id="@+id/keyNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="13sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/takerec"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/take_order_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/take_order"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="11sp" />


        </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>